# hdf5plugin

./: .clang-format  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL.md  LICENSE  LICENSE_H5Zlz4  LICENSE_H5bitshuf  MANIFEST.in  Makefile  README.md  README.rst  SPERR.pc.in  SperrConfig.h.in  appveyor.yml  build-deb.sh  config.make  pyproject.toml  requirements.txt  setup.py  version.py
src/: Bitmask.cpp  CMakeLists.txt  Conditioner.cpp  H5Zbzip2_plugin.c  H5Zzfp_props.c  Makefile  SPECK1D_INT_ENC.cpp  SPECK2D_INT.cpp  SPECK3D_INT.cpp  SPERR3D_OMP_C.cpp  SPERR3D_Stream_Tools.cpp  example.c  h5z-clamp.c  h5z-sperr.c  hdf5_dl.c  hdf5_dl.cpp  jpeg_h5plugin.c  notes_on_clang-tidy  register_win32.c
src/H5Z-SPERR/: CMakeLists.txt  README.md
src/H5Z-SPERR/example/: Makefile  simple_xy_nc4_wr.c
src/H5Z-SPERR/include/: compactor.h  h5z-sperr.h  h5zsperr_helper.h  icecream.h
src/H5Z-SPERR/src/: CMakeLists.txt  compactor.c  h5z-sperr.c  h5zsperr_helper.cpp  icecream.c
src/H5Z-SPERR/utilities/: CMakeLists.txt  example-2d.c  generate_cd_values.c
src/H5Z-ZFP/: CMakeLists.txt  LICENSE  Makefile  README.md  config.make
src/H5Z-ZFP/.github/workflows/: main.yml
src/H5Z-ZFP/cmake/: HDFMacros.cmake
src/H5Z-ZFP/docs/: cd_vals.rst  cmake.rst  conf.py  direct.rst  endian_issues.rst  h5repack.rst  hdf5_chunking.rst  index.rst  installation.rst  interfaces.rst  tests.rst
src/H5Z-ZFP/src/: CMakeLists.txt  H5Zzfp.c  H5Zzfp_plugin.h  H5Zzfp_props.c  H5Zzfp_props.h  H5Zzfp_props_f.F90  H5Zzfp_version.h  Makefile
src/H5Z-ZFP/test/: CMakeLists.txt  Makefile  h5repack-filesizes.bsh  h5repack-filesizes.cmake  mesh.h5  print_h5repack_farg.c  test_error.c  test_read.c  test_rw_fortran.F90  test_write.c  test_zfp_030040.h5  test_zfp_030235.h5  test_zfp_110xxx.h5  test_zfp_be.h5  test_zfp_le.h5
src/HDF5Plugin-Zstandard/: CMakeLists.txt  README.md  zstd_h5plugin.c  zstd_h5plugin.h
src/LZ4/: COPYING  H5Zlz4.c  LICENSE  lz4_h5filter.h  lz4_h5plugin.c
src/SPERR/: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  cli11.patch
src/SPERR/.github/ISSUE_TEMPLATE/: bug_report.md
src/SPERR/.github/workflows/: clang-format.yml  clang-tidy.yml  clang-tidy.yml.bkp  codeql-analysis.yml
src/SPERR/docker/: Dockerfile
src/SPERR/evaluations/: evaluate_compress.sh  test_results_2d.md  test_results_3d.md
src/SPERR/evaluations/May_11/: 128_cube.result  256_cube.result  512_cube.result  notes.txt
src/SPERR/evaluations/May_2/: notes.txt
src/SPERR/evaluations/compare_zfp_sz/: PSNR-BPP.data  PSNR_to_BPP_plot.gp
src/SPERR/examples/C_API/: 2d.c  3d.c  Makefile  test.sh
src/SPERR/include/: Bitmask.h  Bitstream.h  CDF97.h  Conditioner.h  Outlier_Coder.h  SPECK1D_FLT.h  SPECK1D_INT.h  SPECK1D_INT_DEC.h  SPECK1D_INT_ENC.h  SPECK2D_FLT.h  SPECK2D_INT.h  SPECK2D_INT_DEC.h  SPECK2D_INT_ENC.h  SPECK3D_FLT.h  SPECK3D_INT.h  SPECK3D_INT_DEC.h  SPECK3D_INT_ENC.h  SPECK_FLT.h  SPECK_INT.h  SPERR3D_OMP_C.h  SPERR3D_OMP_D.h  SPERR3D_Stream_Tools.h  SPERR_C_API.h  bitstream_definition.txt  sperr_helper.h
src/SPERR/src/: Bitmask.cpp  Bitstream.cpp  CDF97.cpp  CMakeLists.txt  Conditioner.cpp  Outlier_Coder.cpp  SPECK1D_FLT.cpp  SPECK1D_INT.cpp  SPECK1D_INT_DEC.cpp  SPECK1D_INT_ENC.cpp  SPECK2D_FLT.cpp  SPECK2D_INT.cpp  SPECK2D_INT_DEC.cpp  SPECK2D_INT_ENC.cpp  SPECK3D_FLT.cpp  SPECK3D_INT.cpp  SPECK3D_INT_DEC.cpp  SPECK3D_INT_ENC.cpp  SPECK_FLT.cpp  SPECK_INT.cpp  SPERR3D_OMP_D.cpp  SPERR3D_Stream_Tools.cpp  SPERR_C_API.cpp  notes_on_clang-tidy  sperr_helper.cpp
src/SPERR/test_data/: 127x127.float  128x128.float  15x15.float  16x16.float  const32x32x59.float  generate.cpp  lena512.float  pgm2float.cpp  vorticity.128_128_41  vorticity.512_512  wmag.bov  wmag17.float  wmag91.float
src/SPERR/test_scripts/: CMakeLists.txt  bitstream_unit_test.cpp  dwt_unit_test.cpp  outlier_coder_unit_test.cpp  speck2d_flt_unit_test.cpp  speck3d_flt_unit_test.cpp  speck_int_unit_test.cpp  sperr3d_omp_unit_test.cpp  sperr_helper_unit_test.cpp  stream_tools_unit_test.cpp
src/SPERR/utilities/: CMakeLists.txt  double_prec.cpp  show_version.cpp  sperr2d.cpp  sperr3d.cpp  sperr3d_trunc.cpp
src/SZ/example/: test.py
src/SZ/zlib/: CMakeLists.txt
src/SZ3_extra/SZ3/: version.hpp
src/SZ3_extra/darwin/: omp.h
src/SZ_extra/: config.h
src/bitshuffle/: setup.py
src/bitshuffle/src/: bitshuffle.c
src/fcidecomp/: .gitignore  .gitlab-ci.yml  AUTHORS.txt  CHANGES.md  INSTALL.md  LICENSE  LICENSE.txt  NOTICE.txt  README.md
src/fcidecomp-python/: setup.py
src/fcidecomp/conda/: README.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/fcidecomp/documentation/: EUMETSAT Data Tailor Web Service - Support to CharLS decompression for MTG users - Verification Control Document.xlsx
src/fcidecomp/fcicomp-jpegls/: Version.cmake
src/fcidecomp/perf/: test_PERF_PY.py
src/fcidecomp/tests/: test_CLI_TC_01_01.py  test_PY_TC_01_01.py
src/graveyard/: bit_buffer.h
src/hdf5/: hdf5.lib
src/hdf5-blosc/: RELEASE_NOTES.txt
src/hdf5-blosc/src/: example.c
src/hdf5/include/: H5ACpublic.h  H5Apublic.h  H5Cpublic.h  H5DOpublic.h  H5DSpublic.h  H5Dpublic.h  H5Epubgen.h  H5Epublic.h  H5FDcore.h  H5FDdirect.h  H5FDfamily.h  H5FDlog.h  H5FDmpi.h  H5FDmpio.h  H5FDmulti.h  H5FDpublic.h  H5FDsec2.h  H5FDstdio.h  H5FDwindows.h  H5Fpublic.h  H5Gpublic.h  H5IMpublic.h  H5Ipublic.h  H5LDpublic.h  H5LTpublic.h  H5Lpublic.h  H5MMpublic.h  H5Opublic.h  H5PLextern.h  H5PLpublic.h  H5PTpublic.h  H5Ppublic.h  H5Rpublic.h  H5Spublic.h  H5TBpublic.h  H5Tpublic.h  H5Zpublic.h  H5api_adpt.h  H5overflow.h  H5public.h  (+2 more)
src/hdf5plugin/: __init__.py  _filters.py  _utils.py  _version.py  test.py
src/jpegHDF5/: LICENSE  README.md  build_linux
src/jpegHDF5/src/: jpeg_h5filter.c  jpeg_h5filter.h
src/lz4_ipp/: lz4.c  lz4.h  lz4hc.c  lz4hc.h  readme.html
src/snappy/: snappy-stubs-public.h
test_scripts/: CMakeLists.txt  compactor_test.cpp  h5zsperr_helper_test.cpp  icecream_test.cpp
test_scripts/graveyard/: speck3d_unit_test.cpp
(+361 files in other folders)
